Add profile screen assets and update UI layout
- Added post images 1-6
- Added profile picture and story highlights
- Updated profile_screen.dart, home_screen.dart, bottom_navbar.dart
- Minor dependency updates in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ flutter:
     - assets/home screen/post icons/
     - assets/home screen/post profile/
     - assets/home screen/stories/
+    - assets/profile screen/posts/
+    - assets/profile screen/profile/
+    - assets/profile screen/stories/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
